# Aho-Corasick-Look-ahead-Adaptive-Weighted-Rejection-Sampling

./: LICENSE  README.md  pyproject.toml
examples/: ban_tactic.py
src/AhoCorasickSampler/: __init__.py  ban_phrase.py
